--- a/src/eh-rxjs02-beyond-the-basics-creating-observables-from-scratch/04-00-observable-handling-error.html
+++ b/src/eh-rxjs02-beyond-the-basics-creating-observables-from-scratch/04-00-observable-handling-error.html
@@ -16,33 +16,41 @@
   <div class="app"></div>
   <script src="http://localhost:9091/less/less-v2.7.2.min.js"></script>
   <script src="http://localhost:9091/lodash/lodash-4.17.10.min.js"></script>
-  <script src="http://localhost:9091/rxjs/rxjs-v5.4.3-bundles-Rx.min.js"></script>
+  <script src="http://localhost:9091/rxjs/rxjs-v5.5.12.js"></script>
 
   <script src="http://localhost:9091/babel/babel-standalone-v7.0.0-alpha.20.min.js"></script>
   <script src="http://localhost:9091/babel/babel-polyfill-v7.0.0-alpha.20.min.js"></script>
 
   <script>
-
-let initialStream = Rx.Observable.interval(100).take(10);
-initialStream = Rx.Observable.from([1,2,3])
-const stream = initialStream.flatMap(
-  (v) => {
-    let out = Rx.Observable.create( observer =>{
-      observer.next('x')
-    })
-    out = v;//'x'
-    console.log(v)
-    return out;
-  }
-).subscribe( v=>console.log(v))
-
-
-
+    console.log( `
+      _: version ${_.VERSION} </br>
+      less: version ${less.version} </br>
+    `);
   </script>
 
-  <!-- <script type="text/babel" > -->
-  <!--   console.log('hello') -->
-  <!-- </script> -->
+  <script type="text/babel" >
+
+    const bar = Rx.Observable.create(obs => {
+      try {
+        obs.next('a')
+        obs.next('b')
+        throw new Error('opps!');
+        obs.next('c') // <--- note this line never run
+      } catch (er) {
+        obs.error(er)
+      }
+    })
+
+    bar.subscribe(
+      function nextValueHandler(v) {
+        console.log(v)
+      },
+      function errorHandler(er) {
+        console.log('error msg: ', er)
+      }
+    )
+
+  </script>
 </body>
 
 </html>
